--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,60 +1,61 @@
-<footer>
-    <div class="tres_columnas">
-    <div class="col1footer">
-        <section>
-            <h4>Ayuda</h4>
-        </section>
-        <section>
+<footer class="footer">
+    <div class="container-footer">
+    <div class="footer-col">
+            <h4>Contacto</h4>
             <ul>
-                <li>Envios</li>
-                <li>Preguntas Frecuentes</li>
-                <li>Como Devolver</li>
+                <li><a href= "#">Envios</a></li>
+                <li><a href= "#">Devoluciones</a></li>
+                <li><a href= "#">Guia de Compra</a></li>
             </ul>
-        </section>
-    </div>
-    <div class="col2footer">
-        <section>
-            <h4>Equipo</h4>
-        </section>
-        <section>
-            <div class="equipo">
-            <div>
-                <img src="" alt="">
-                <p>Milagros</p>
+        </div>
+        <div class="footer-col">
+            <h4>Desarroladores</h4>
+            <div class="dev-cont">
+                <p>Julieth </p>
+                <img src="/images/icon/julieth.PNG" alt="">
+                <p>Juan Esteban </p>
+                <img src="/images/icon/juan.PNG" alt="">
+                <p>David May</p>
+                <img src="/images/icon/david.PNG" alt="">
             </div>
-            <div>
-                <img src="" alt="">
-                <p>David</p>
-            </div>
-            <div>
-                <img src="" alt="">
-                <p>Julieth</p>
-            </div>
-            <div>
-                <img src="" alt="">
-                <p>Lautaro</p>
-            </div>
-            <div>
-                <img src="" alt="">
-                <p>Juan</p>
+            
+        </div>
+        <div class="footer-col">
+            <h4>Contacto</h4>
+           <div class="contact">
+            <img class="img-footer" src="/images/Logo/logo.png" alt="logo">
+            
+              
             </div>
         </div>
-        </section>
+            <div class="footer-col">
+              <h4>Siguenos</h4>
+              <div class="row-icon">
+                <img src="/images/icon/facebook.png">
+                <label for="">Siguenos en Facebook</label>
+            </div>
+            <div class="row-icon">
+                <img src="/images/icon/twitter.png">
+                <label for="">Siguenos en Twitter</label>
+            </div>
+            <div class="row-icon">
+                <img src="/images/icon/instagram.png">
+                <label for="">Siguenos en Instagram</label>
+            </div>
+            <div class="row-icon">
+                <img src="/images/icon/whatsapp.png">
+                <label for="">Siguenos en whatsapp</label>
+            </div>
+            <div class="row-icon">
+                <img src="/images/icon/linkedin.png">
+                <label for="">Siguenos en Linkedin</label>
+                
+            </div>
+          
+        
+                
+            </div>
+        </div>
     </div>
-    <div class="col3footer">
-        <section>
-            <h4>Redes Sociales</h4>
-        </section>
-        <section class="redes">
-            <div><a href="https://www.facebook.com"><i class="fab fa-facebook"></i></a></div>
-            <div><a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a></div>
-            <div><a href="https://web.whatsapp.com/"><i class="fab fa-whatsapp"></i></a></div>
-            <div><i class="fas fa-at"></i>
-            </i></div>
-        </section>
-    </div>
-</div>
-    <div class="derechos">
-        <p>@SWIP, Todos los derechos reservados</p>
-    </div>
+
 </footer>
