--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Swip - Registrarse</title>
     <link rel="stylesheet" href="./css/register.css">
+    <link rel="stylesheet" href="./css/footer.css">
 </head>
 
 <body>
@@ -92,7 +93,7 @@
                             </form>
         </main>
 
-        <footer>
+        <!-- <footer>
             <div class="tres_columnas">
                 <div class="col1footer">
                     <section>
@@ -151,7 +152,8 @@
             <div class="derechos">
                 <p>@SWIP, Todos los derechos reservados</p>
             </div>
-        </footer>
+        </footer> -->
 </body>
+<%- include ("./partials/footer")%>
 
 </html>
