--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,6 +8,8 @@
     <title>Swip - Moda personalizada</title>
     <link rel="shortcut icon" href="/images/logo/favicon.ico">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/footer.css">
+   
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     rel="stylesheet"/>
     <link href="https://use.fontawesome.com/releases/v5.0.8/js/brands.js" rel="stylesheet">
