--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Swip - login</title>
   <link rel="stylesheet" href="./css/login.css">
+  <link rel="stylesheet" href="./css/footer.css">
 </head>
 
 <body>
