--- a/src/views/productCart.ejs
+++ b/src/views/productCart.ejs
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="/images/logo/favicon.ico">
     <link rel="stylesheet" href="/css/cartStyle.css">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/footer.css">
     
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
