--- a/src/views/store.ejs
+++ b/src/views/store.ejs
@@ -33,13 +33,13 @@
             </div>
 
             <div class="page-products">
-                <% products.forEach(function(product){ %>
+                <% for(let i=0; i<Productos.length;i++){ %>
                 <div class="product-container">
-                    <h3>Nombre : <%= product.nombreProducto %> </h3>
-                    <h4>Talla : <%= product.tamaño %> </h4>
+                    <h3>Nombre : <a href="/productDetail/<%=Productos[i].id%>"><%= Productos[i].nombre %></a> </h3>
+                    <h4>Talla : <%= Productos[i].talla %> </h4>
                     <img src= "/images/store/<%= product.image %>">
-                    <p> $<%= (product.precio) %></p>
-                    <p><%= (product.descripcion) %></p>
+                    <p> $<%= (Productos[i].precio) %></p>
+                    <p><%= (Productos[i].descripcion) %></p>
                     <button class="button-buy">Comprar</button>
 
                 </div>  
