--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -39,11 +39,11 @@
             <div class="informacion_tallas_compras">
                 <img src="images/imagenes ropa/Guia-5.jpg" class="guia-tallas">
                 <!-- <img src="images/fondos/fondoop8.jpg" class="fondo3"> -->
-                <p class="boton"><a href="/src/views/SizeGuide.html" target="_blank">Guía de tallas</a></p>
+                <p class="boton"><a href="SizeGuide" target="_blank">Guía de tallas</a></p>
             </div>
             <div class="informacion_tallas_compras">
                 <img src="images/imagenes ropa/Cómo_encargar5.jpg" class="encargos">
-                <p class="boton"><a href="/src/views/howToBuy.html" target="_blank">¿Cómo encargar?</a></p>
+                <p class="boton"><a href="howToBuy" target="_blank">¿Cómo encargar?</a></p>
             </div>
         </div>
     </main>
