--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -32,23 +32,23 @@
               <h4>Siguenos</h4>
               <div class="row-icon">
                 <img src="/images/icon/facebook.png">
-                <label for="">Siguenos en Facebook</label>
+                <label for="">Facebook</label>
             </div>
             <div class="row-icon">
                 <img src="/images/icon/twitter.png">
-                <label for="">Siguenos en Twitter</label>
+                <label for="">Twitter</label>
             </div>
             <div class="row-icon">
                 <img src="/images/icon/instagram.png">
-                <label for="">Siguenos en Instagram</label>
+                <label for="">Instagram</label>
             </div>
             <div class="row-icon">
                 <img src="/images/icon/whatsapp.png">
-                <label for="">Siguenos en whatsapp</label>
+                <label for="">Whatsapp</label>
             </div>
             <div class="row-icon">
                 <img src="/images/icon/linkedin.png">
-                <label for="">Siguenos en Linkedin</label>
+                <label for="">Linkedin</label>
                 
             </div>
           
