--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -12,7 +12,7 @@
             <h4>Desarroladores</h4>
             <div class="dev-cont">
                 <p>Julieth </p>
-                <img src="/images/icon/julieth.PNG" alt="">
+                <img src="/images/icon/juan.PNG" alt="">
                 <p>Juan Esteban </p>
                 <img src="/images/icon/juan.PNG" alt="">
                 <p>David May</p>
