--- a/src/views/store.ejs
+++ b/src/views/store.ejs
@@ -37,7 +37,7 @@
                 <div class="product-container">
                     <h3>Nombre : <a href="/productDetail/<%=Product[i].id%>"><%= Product[i].nombre %></a> </h3>
                     <h4>Talla : <%= Product[i].talla %> </h4>
-                    <img src= "/images/store/<%= Product.image %>">
+                    <!-- <img src= "/images/store/<%= Product[id].image %>"> -->
                     <p> $<%= (Product[i].precio) %></p>
                     <p><%= (Product[i].descripcion) %></p>
                     <button class="button-buy">Comprar</button>
