--- a/src/views/newProduct.ejs
+++ b/src/views/newProduct.ejs
@@ -44,7 +44,7 @@
                     <div class="tamaños">
                         <% for (let i=0; i < Size.length; i++) { %> 
                         <div>
-                            <label for=<%= Tallas[i].talla %>>
+                            <label for=<%= Size[i].talla %>>
                                 <input type="radio" name=talla value=<%= Size[i].talla %> class="tallas" id=<%= Size[i].talla %>>
                                 <%= Size[i].talla %></label>
                         </div>
