--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -58,11 +58,11 @@
                                             <label for="password">Contraseña</label>
                                         </div>
                                         <div class="passwordlogin">
-                                            <input type="password" name="contraseña">
+                                            <input type="password" name="password">
                                         </div>
-                                        <% if (locals.errors && errors.contraseña) { %>
+                                        <% if (locals.errors && errors.password) { %>
                                             <div class="texto-error">
-                                                <%= errors.contraseña.msg %>
+                                                <%= errors.password.msg %>
                                             </div>
                                             <% } %>
 
@@ -73,12 +73,6 @@
                                         <div class="passwordconfirm">
                                             <input type="password" name="passwordconfirm">
                                         </div>
-
-                                        <% if (locals.errors && errors.contraseña) { %>
-                                            <div class="texto-error">
-                                                <%= errors.contraseña.msg %>
-                                            </div>
-                                            <% } %>
 
                                         <div class="avatar">
                                             <h4 class="title">Elije la foto del producto</h4>
@@ -93,66 +87,7 @@
                             </form>
         </main>
 
-        <!-- <footer>
-            <div class="tres_columnas">
-                <div class="col1footer">
-                    <section>
-                        <h4>Ayuda</h4>
-                    </section>
-                    <section>
-                        <ul>
-                            <li>Envios</li>
-                            <li>Preguntas Frecuentes</li>
-                            <li>Como Devolver</li>
-                        </ul>
-                    </section>
-                </div>
-                <div class="col2footer">
-                    <section>
-                        <h4>Equipo</h4>
-                    </section>
-                    <section>
-                        <div class="equipo">
-                            <div>
-                                <img src="" alt="">
-                                <p>Milagros</p>
-                            </div>
-                            <div>
-                                <img src="" alt="">
-                                <p>David</p>
-                            </div>
-                            <div>
-                                <img src="" alt="">
-                                <p>Julieth</p>
-                            </div>
-                            <div>
-                                <img src="" alt="">
-                                <p>Lautaro</p>
-                            </div>
-                            <div>
-                                <img src="" alt="">
-                                <p>Juan</p>
-                            </div>
-                        </div>
-                    </section>
-                </div>
-                <div class="col3footer">
-                    <section>
-                        <h4>Redes Sociales</h4>
-                    </section>
-                    <section class="redes">
-                        <div><a href="https://www.facebook.com"><i class="fab fa-facebook"></i></a></div>
-                        <div><a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a></div>
-                        <div><a href="https://web.whatsapp.com/"><i class="fab fa-whatsapp"></i></a></div>
-                        <div><i class="fas fa-at"></i>
-                            </i></div>
-                    </section>
-                </div>
-            </div>
-            <div class="derechos">
-                <p>@SWIP, Todos los derechos reservados</p>
-            </div>
-        </footer> -->
+    
 </body>
 <%- include ("./partials/footer")%>
 
