--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,3 +1,7 @@
+<head>
+    <link rel="stylesheet" href="/css/footer.css">
+    <script src="https://kit.fontawesome.com/86a97245b7.js" crossorigin="anonymous"></script>
+</head>
 <footer class="footer">
     <div class="container-footer">
     <div class="footer-col">
