--- a/src/views/partials/headerMain.ejs
+++ b/src/views/partials/headerMain.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="shortcut icon" href="/images/logo/favicon.ico">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <script src="https://kit.fontawesome.com/86a97245b7.js" crossorigin="anonymous"></script>
     <!-- <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet"> -->
 </head>
