--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -15,7 +15,7 @@
   <%- include ("./partials/headerMain")%>
     <main>
       <div class = formCompleto>
-        <form action="/user/login" method="POST">
+        <form action="/login" method="POST">
           <div class="register-container">
 
             <h1 class="title">Ingresar</h1>
