--- a/src/views/partials/headerMain.ejs
+++ b/src/views/partials/headerMain.ejs
@@ -23,8 +23,8 @@
 
             <% } %> else <% { %> 
         <div class="login-carrito">
-            <a href="/user/login"><i class="far fa-user"></i></a>
-            <p class="texto"><a href="/user/login"> Iniciar sesión</a></p>
+            <a href="/login"><i class="far fa-user"></i></a>
+            <p class="texto"><a href="/login"> Iniciar sesión</a></p>
             <a href="/productCart"><i class="fas fa-shopping-cart"></i></a>
             <p class="texto"><a href="/productCart"> Carrito de compras </a></p>
             <% } %>
