--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -54,24 +54,24 @@
                                             </div>
                                             <% } %>
 
-                                        <div class="passwordlogin">
-                                            <label for="password">Contraseña</label>
+                                        <div class="clavelogin">
+                                            <label for=" clave">Contraseña</label>
                                         </div>
-                                        <div class="passwordlogin">
-                                            <input type="password" name="password">
+                                        <div class=" clavelogin">
+                                            <input type=" clave" name= "clave">
                                         </div>
-                                        <% if (locals.errors && errors.password) { %>
+                                        <% if (locals.errors && errors. clave) { %>
                                             <div class="texto-error">
-                                                <%= errors.password.msg %>
+                                                <%= errors. clave.msg %>
                                             </div>
                                             <% } %>
 
-                                        <div class="passwordconfirm">
-                                            <label for="passwordconfirm">Confirmar Contraseña</label>
+                                        <div class= "claveconfirm">
+                                            <label for= "claveconfirm">Confirmar Contraseña</label>
                                         </div>
 
-                                        <div class="passwordconfirm">
-                                            <input type="password" name="passwordconfirm">
+                                        <div class=" claveconfirm">
+                                            <input type= "clave" name= "claveconfirm">
                                         </div>
 
                                         <div class="avatar">
