--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -29,8 +29,8 @@
                   <% } %>
             </div>
             <div class="inputs">
-              <label for="password">Contraseña</label>
-              <input type="password" name="password" id="password" placeholder="Contraseña" required>
+              <label for="clave">Contraseña</label>
+              <input type="clave" name="clave" id="clave" placeholder="Contraseña" required>
             </div>
             <div>
               <label for=""><input type="checkbox" name="remember-user"> Recordar mi cuenta</label>
