--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -58,7 +58,7 @@
                                             <label for=" clave">Contraseña</label>
                                         </div>
                                         <div class=" clavelogin">
-                                            <input type=" clave" name= "clave">
+                                            <input type=" password" name= "clave">
                                         </div>
                                         <% if (locals.errors && errors. clave) { %>
                                             <div class="texto-error">
