--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -15,8 +15,9 @@
             <div>
                 <div>
                     <div>
-                        <h2>Hola <%= user.nombre%> </h2>
-                        <img src="/public/images/avatars/<% user.avatar %> >">
+                        <h2>Hola <%= user.nombres%> </h2>
+                        <p><%=user.avatar %></p>
+                        <img src="/images/avatars/<%=user.avatar%>">
                         <br>
                         <br>
                         <div>
