--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -21,7 +21,7 @@
     <div class="product-container">
         <h3>Nombre : <%= Product.nombre %> </h3>
         <h4>Talla : <%= Product.talla %> </h4>
-        <img src= "/images/store/<%= Product.image %>">
+        <img src="/images/store/<%=Product.imagen%>">
         <p> $<%= (Product.precio) %></p>
         <p><%= (Product.descripcion) %></p>
         <button class="button-buy">Comprar</button>
